# public_dotfiles

./: .profile  .xinitrc  .zshrc  pacman-installed.txt  test.json  testTide.js  testWeather.json
.cabal/: config
.config/nvim/: init.vim
.config/termite/: config
.emacs.d/: init.el
.ghc/: ghci.conf
.i3/: config  tmux.dropdown.sh  workspace_controller.py
.i3/blocks/: battery.hs  cmus_status  cmus_status.hs  i3blocks.conf  weather  wifi.hs
.xmonad/: get-cmus-current.sh  get_volume.sh  startup.sh  xmobarrc.hs  xmonad.hs  xmonadAndre.cabal
i3/: .gitignore  .i3  config  startup.sh  tmux.dropdown.sh
i3/blocks/: bandwidth  disk.sh  i3blocks.conf  wifi.hs
nixos/nixos/: configuration.nix  hardware-configuration.nix
nixos/nixos/apps/: tmux.nix
nixos/nixos/graphical/: fonts.nix
nixos/nixos/services/: docker.nix  psql.nix  ssh.nix
