name:                xmonadAndre
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/andrevdm/xmonadConfig
license:             BSD3
author:              Andre Van Der Merwe
maintainer:          andre@andrevdm.com
copyright:           2019 Andre Van Der Merwe
category:            GUI
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  hs-source-dirs:      .
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints -Wnoncanonical-monad-instances -Widentities -fhide-source-paths -Wmissing-export-lists -Wpartial-fields -Werror=incomplete-patterns
  build-depends:       base
                     , protolude
                     , text
                     , xmonad
                     , xmonad-contrib
                     , data-default
                     , containers
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/andrevdm/xmonadConfig
